import 'dart:io';

import 'package:flutter/material.dart';
import '../main.dart' show navigatorKey;
import '../services/ssh_service.dart';
import '../services/sftp_service.dart';
import '../theme/app_theme.dart';
import '../widgets/neon_dialog.dart';

class SftpScreen extends StatefulWidget {
...
